--- a/about-us.html
+++ b/about-us.html
@@ -68,7 +68,7 @@
           <div class="w-col w-col-6 w-col-small-6">
             <p class="aboutparagraph1">Your health is important to you and it is equally important to us. Manage it on your terms - from the hospital you choose, to the food you eat.&nbsp;
               <br>
-              <br><a class="abouttextlinks" target="_blank" href="https://seek-community.us/">Seek your health - absolutely free.</a>
+              <br><a class="abouttextlinks" target="_blank" href="https://ksrdsgn.github.io/prjkt003/">Seek your health - absolutely free.</a>
             </p>
           </div>
         </div>
