--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="w-col w-col-6">
             <h1 class="seekheader1">Health Seekers</h1>
             <p class="forindivpara seekparagraph">Your health should only be controlled by one person - you.
-              <a class="seektextlinks" target="_blank" href="https://seek-community.us/"></a><a xmlns="http://www.w3.org/1999/xhtml" target="_blank" class="signinlink" href="https://seek-community.us/">Sign In</a>&nbsp;our app to manage your fitness, learn about your symptoms, be seen by a doctor, and much more.</p>
+              <a class="seektextlinks" target="_blank" href="https://seek-community.us/"></a><a xmlns="http://www.w3.org/1999/xhtml" target="_blank" class="signinlink" href="https://ksrdsgn.github.io/prjkt003/">Sign In</a>&nbsp;our app to manage your fitness, learn about your symptoms, be seen by a doctor, and much more.</p>
           </div>
         </div>
       </div>
